# EarlyInitApp

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  early_init.cpp  earlyinit_jni.cpp
app/src/main/java/com/example/earlyinit/: EarlyInitComponentFactory.kt  EarlyInitVerifier.kt  MainActivity.kt  MyApplication.kt
app/src/main/res/values/: strings.xml
